# cv_web

./: .gitignore  Makefile  README.md  app.py  pyproject.toml
docs/: CNAME  education.html  employment.html  index.html  interests.html
src/elimayost_cv/: __init__.py  __main__.py
src/elimayost_cv/templates/: education.html  employment.html  interests.html  skills.html
src/elimayost_cv/templates/partials/: title.html
templates/: education.html  employment.html  interests.html  skills.html
templates/partials/: contacts.html  menu.html
