[project]
name = "elimayost-cv"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Eli Mayost", email = "eli.mayost@googlemail.com" }
]
dependencies = [
    "flask>=3.0.3",
    "gunicorn>=23.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"elimayost-cv" = "elimayost_cv:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/elimayost_cv"]
